--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
         "observar-testes-unitarios-com-coverage": "jest --coverage --watchAll",
         "lint": "eslint . --ext .ts",
         "deixar-codigo-bonito": "prettier --config .prettierrc --write fontes/**/*.ts",
-        "umd": "yarn rollup fontes/index.ts --config rollup.config.ts --configPlugin @rollup/plugin-typescript"
+        "umd": "yarn browserify dist/index.js --s Delegua -o dist/umd/delegua.js",
+        "umd:rollup": "yarn rollup fontes/index.ts --config rollup.config.ts --configPlugin @rollup/plugin-typescript"
     },
     "repository": {
         "type": "git",
@@ -69,6 +70,7 @@
         "@typescript-eslint/parser": "^5.46.1",
         "antlr4": "^4.12.0",
         "antlr4ts-cli": "^0.5.0-alpha.4",
+        "browserify": "^17.0.0",
         "copyfiles": "^2.4.1",
         "eslint": "^8.29.0",
         "eslint-config-prettier": "^8.5.0",
