Remoção do dialeto Mapler. (#681)

--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
         "delegua",
         "mapler",
         "português",
-        "portugol"
+        "portugol",
+        "potigol"
     ],
     "author": "Leonel Sanches da Silva",
     "contributors": [
