--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "copiar-arquivos-pacote": "yarn copyfiles -V ./bin/delegua ./bin/delegua.cmd ./dist && yarn copyfiles -V ./package.json ./dist/bin && yarn copyfiles -V ./README.md ./dist",
         "empacotar": "yarn rimraf ./dist && tsc && yarn umd && yarn copiar-arquivos-pacote",
         "gerar-documentacao-tecnica": "typedoc --out docs fontes/index.ts",
-        "publicar-docs": "yarn gerar-documentacao-tecnica && copyfiles -V ./recursos/**/* ./docs && gh-pages -d docs",
+        "publicar-docs": "yarn gerar-documentacao-tecnica && yarn copyfiles -V ./recursos/**/* ./docs && yarn gh-pages -d docs",
         "publicar-npm": "npm publish ./dist --access public",
         "testes-unitarios": "jest --coverage",
         "testes-unitarios:insignias": "jest-coverage-badges --output ./recursos/imagens",
