--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
         "@types/estree": "^1.0.0",
         "@types/jest": "^29.5.13",
         "@types/lodash": "^4.14.194",
+        "@types/node": "^22.7.6",
         "@typescript-eslint/eslint-plugin": "^5.46.1",
         "@typescript-eslint/parser": "^5.46.1",
         "antlr4": "^4.12.0",
