--- a/package.json
+++ b/package.json
@@ -56,6 +56,10 @@
         "url": "https://github.com/DesignLiquido/delegua/issues"
     },
     "homepage": "https://github.com/DesignLiquido/delegua#readme",
+    "publishConfig": {
+        "access": "public",
+        "registry": "https://registry.npmjs.org"
+    },
     "devDependencies": {
         "@babel/preset-env": "^7.20.2",
         "@rollup/plugin-babel": "^6.0.4",
